[gd_scene load_steps=6 format=3 uid="uid://bmjqf30wl6ddi"]

[ext_resource type="Script" uid="uid://cthb4d6c2kkxh" path="res://cards/card.gd" id="1_nwofj"]
[ext_resource type="Texture2D" uid="uid://bcptp1n4fu6x8" path="res://cardImg/AdrenalineSurge.png" id="2_nwofj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nwofj"]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ivai2"]
draw_center = false

[sub_resource type="Theme" id="Theme_4k7q8"]
Button/styles/hover = SubResource("StyleBoxFlat_nwofj")
Button/styles/normal = SubResource("StyleBoxFlat_ivai2")

[node name="Control" type="Control"]
custom_minimum_size = Vector2(45, 80)
layout_mode = 3
anchors_preset = 0
offset_left = 2.0
offset_top = -1.0
offset_right = 47.0
offset_bottom = 79.0
script = ExtResource("1_nwofj")

[node name="Control" type="Panel" parent="."]
custom_minimum_size = Vector2(45, 80)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
custom_minimum_size = Vector2(45, 80)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.321569, 1, 0)

[node name="itemImg" type="TextureRect" parent="Control/ColorRect"]
custom_minimum_size = Vector2(45, 80)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_nwofj")
expand_mode = 3
stretch_mode = 5

[node name="Button" type="Button" parent="Control/ColorRect/itemImg"]
custom_minimum_size = Vector2(45, 80)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_4k7q8")

[node name="name" type="Label" parent="Control/ColorRect"]
visible = false
layout_mode = 0
offset_left = 5.0
offset_top = -3.0
offset_right = 131.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Your Cards"
horizontal_alignment = 1

[connection signal="button_down" from="Control/ColorRect/itemImg/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Control/ColorRect/itemImg/Button" to="." method="_on_button_button_up"]
